log
Thu 28 Sep 2023 01:21:54 AM UTC: 
 tests:  0|4
total_score: 0/70
45519d5
Thu 28 Sep 2023 01:35:58 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘nuevoArreglo’
   37 |   nuevoHeap->nuevoArreglo=
      |            ^~
heap.c:39:4: error: expected expression before ‘return’
   39 |    return NULL;
      |    ^~~~~~
heap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e10efe9
Thu 28 Sep 2023 01:38:13 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
heap.c:39:21: error: expected ‘;’ before ‘return’
   39 |   nuevoHeap->capac=3
      |                     ^
      |                     ;
   40 | 
   41 |    return NULL;
      |    ~~~~~~            
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32e374f
Thu 28 Sep 2023 01:38:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
Compilation failed
244c24e
Thu 28 Sep 2023 01:38:59 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
heap.c:41:19: error: expected ‘;’ before ‘}’ token
   41 |   return nuevoHeap
      |                   ^
      |                   ;
   42 | }
      | ~                  
Compilation failed
4f1f7c0
Thu 28 Sep 2023 01:39:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(2 * sizeof(heapElem));
      |            ^~
Compilation failed
b072854
Thu 28 Sep 2023 01:39:11 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(3 * sizeof(heapElem));
      |            ^~
Compilation failed
94f53f1
Thu 28 Sep 2023 01:39:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArreglo’
   37 |   nuevoHeap->HeapArreglo=(heapElem *)malloc(3 * (sizeof(heapElem)));
      |            ^~
Compilation failed
0eae33a
Thu 28 Sep 2023 01:40:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   37 |   nuevoHeap->HeapArray=(heapElem *)malloc(3 * sizeof(heapElem));
      |              ^~~~~~~~~
      |              heapArray
Compilation failed
537d2ca
Thu 28 Sep 2023 01:40:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3ecca26
Thu 28 Sep 2023 01:54:07 AM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|3
total_score: 10/70
044b060
Thu 28 Sep 2023 01:56:10 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   35 |   nuevo->data=data;
      |        ^~
heap.c:36:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   36 |   nuevo->priority=priority;
      |        ^~
Compilation failed
071bd3b
Thu 28 Sep 2023 01:56:48 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   35 |   nuevo->data=data;
      |        ^~
heap.c:36:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   36 |   nuevo->priority=priority;
      |        ^~
Compilation failed
5053d0b
Thu 28 Sep 2023 02:03:48 AM UTC: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   35 |   nuevo->data=data;
      |        ^~
heap.c:36:8: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   36 |   nuevo->priority=priority;
      |        ^~
heap.c:44:47: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   44 |   while(posicion>0 || (pq->heapArray[posicion]->priority > pq->heapArray[nuevaPosicion]->priority)){
      |                                               ^~
heap.c:44:88: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   44 |   while(posicion>0 || (pq->heapArray[posicion]->priority > pq->heapArray[nuevaPosicion]->priority)){
      |                                                                                        ^~
Compilation failed
635b059
